# lyric-vector-visualizer

./: .gitignore  README.md  pyproject.toml
assets/: metadata.pkl  vectors.npy
assets/lyrics/: 01 - No One Mourns the Wicked.txt  02 - Dear Old Shiz.txt  03 - The Wizard And I.txt  04 - What Is This Feeling?.txt  05 - Something Bad.txt  06 - Dancing Through Life.txt  07 - Popular.txt  08 - I’m Not That Girl.txt  09 - One Short Day.txt  10 - A Sentimental Man.txt  11 - Defying Gravity.txt  Defying Gravity.txt  The Wizard And I.txt  What Is This Feeling?.txt
assets/metadata/: 01 - No One Mourns the Wicked.pkl  02 - Dear Old Shiz.pkl  03 - The Wizard And I.pkl  04 - What Is This Feeling?.pkl  05 - Something Bad.pkl  06 - Dancing Through Life.pkl  07 - Popular.pkl  08 - I’m Not That Girl.pkl  09 - One Short Day.pkl  10 - A Sentimental Man.pkl  11 - Defying Gravity.pkl  Defying Gravity.pkl  The Wizard And I.pkl  What Is This Feeling?.pkl
assets/vectors/: 01 - No One Mourns the Wicked.npy  02 - Dear Old Shiz.npy  03 - The Wizard And I.npy  04 - What Is This Feeling?.npy  05 - Something Bad.npy  06 - Dancing Through Life.npy  07 - Popular.npy  08 - I’m Not That Girl.npy  09 - One Short Day.npy  10 - A Sentimental Man.npy  11 - Defying Gravity.npy  Defying Gravity.npy  The Wizard And I.npy  What Is This Feeling?.npy
src/: embedding.py  regist.py
